--- a/sections/activate-account.liquid
+++ b/sections/activate-account.liquid
@@ -80,6 +80,8 @@
         {{- description | default: "You can now close this page" -}}
       </div>
 
+      <hr class="account__separator">
+
       <a href="{{ routes.root_url }}" class="account__button button button--primary button--large">
         {{- button_label | default: "Back to home" -}}
       </a>
