--- a/sections/edit-password-form.liquid
+++ b/sections/edit-password-form.liquid
@@ -84,14 +84,12 @@
         </div>
       {%- endif -%}
 
-      {%- form 'edit_password' -%}
-        <div class="account-fieldset__block{%- if form.errors.password -%}account-fieldset--error{%- endif -%}">
-          <label for="user_password" class="account-fieldset__label">
-            {{- password_label | default: "New password" -}}
+      <hr class="account__separator">
 
-            <span class="account-fieldset__label-backlight">
-                {{- password_label | default: "New password" -}}
-            </span>
+      {%- form 'edit_password' -%}
+        <div class="account-fieldset__block account__divider--small{%- if form.errors.password -%} account-fieldset--error{%- endif -%}">
+          <label for="user_password" class="account-fieldset__label">
+            {{- password_label | default: "New password" | append: "*" -}}
           </label>
 
           <input
@@ -111,11 +109,7 @@
 
         <div class="account-fieldset__block{% if form.errors.password_confirmation %} account-fieldset--error{%- endif -%}">
           <label for="user_password_confirmation" class="account-fieldset__label">
-            {{- password_confirmation | default: "Confirm new password" -}}
-
-            <span class="account-fieldset__label-backlight">
-              {{- password_confirmation | default: "Confirm new password" -}}
-            </span>
+            {{- password_confirmation | default: "Confirm new password" | append: "*" -}}
           </label>
 
           <input
