--- a/sections/reset-password-form.liquid
+++ b/sections/reset-password-form.liquid
@@ -89,14 +89,12 @@
         {{- description | default: "Enter your email address and within a few minutes you will receive a link with which you can set a new password." -}}
       </div>
 
+      <hr class="account__separator">
+
       {%- form 'reset_password' -%}
         <div class="account-fieldset__block{% if form.errors.email %} account-fieldset--error{%- endif -%}">
           <label for="user_email" class="account-fieldset__label">
-            {{- email_label | default: "Email" -}}
-
-            <span class="account-fieldset__label-backlight">
-              {{- email_label | default: "Email" -}}
-            </span>
+            {{- email_label | default: "Email" | append: "*" -}}
           </label>
 
           <input
