--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -274,7 +274,7 @@
             "label": "Around whole product"
           }
         ],
-        "default": "full"
+        "default": "image"
       },
       {
         "type": "select",
