--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -106,12 +106,14 @@
       <div class="product-card__description">{{- excerpt -}}</div>
     {%- endif -%}
 
-    <div class="product-card__price-info">
-      <div class="product-card__price-wrapper">
-        <span class="product-card__price">{{- price -}}</span>
-        <span class="product-card__price-separator">/</span>
-        <span class="product-card__period">{{- period -}}</span>
+    {%- if price != blank and period != blank -%}
+      <div class="product-card__price-info">
+        <div class="product-card__price-wrapper">
+          <span class="product-card__price">{{- price -}}</span>
+          <span class="product-card__price-separator">/</span>
+          <span class="product-card__period">{{- period -}}</span>
+        </div>
       </div>
-    </div>
+    {%- endif -%}
   </div>
 </div>
