--- a/assets/title.css
+++ b/assets/title.css
@@ -42,6 +42,24 @@
   color: var(--color-primary);
 }
 
+.title__description {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.title__description ol,
+.title__description ul,
+.title__description p,
+.title__description blockquote,
+.title__description table,
+.title__description dl,
+.title__description dd,
+.title__description address,
+.title__description pre {
+  text-align: left;
+}
+
 .title__heading + .title__description:not(:empty) {
   padding-top: 25px;
 }
