--- a/sections/search.liquid
+++ b/sections/search.liquid
@@ -1,113 +1,156 @@
-{%- if results_count > 0 -%}
+{{ "search.css" | asset_url | stylesheet_tag }}
+{{ "product-card.css" | asset_url | stylesheet_tag }}
 
-  {{ "search.css" | asset_url | stylesheet_tag }}
-  {{ "product-card.css" | asset_url | stylesheet_tag }}
+{%- assign borders               = section.settings.borders -%}
+{%- assign border                = false -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
+{%- assign counter               = results_count -%}
+{%- assign counter_singular      = section.settings.counter_singular -%}
+{%- assign counter_plural        = section.settings.counter_plural -%}
+{%- assign full_width            = section.settings.full_width -%}
+{%- assign grid                  = section.settings.grid -%}
+{%- assign image_placeholder 	   = settings.image_placeholder -%}
+{%- assign is_focal              = settings.use_focal_images -%}
+{%- assign limit                 = section.settings.limit -%}
+{%- assign message               = section.settings.message -%}
+{%- assign mobile_toggler        = section.settings.mobile_toggler -%}
+{%- assign padding_top           = section.settings.padding_top -%}
+{%- assign padding_bottom        = section.settings.padding_bottom -%}
+{%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
+{%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
+{%- assign rounded_corners       = section.settings.rounded_corners -%}
+{%- assign show_amount           = section.settings.show_amount -%}
+{%- assign show_excerpt          = section.settings.show_excerpt -%}
+{%- assign sticky_sidebar        = section.settings.sticky_sidebar -%}
 
-  {%- assign grid                  = section.settings.grid -%}
-  {%- assign limit                 = section.settings.limit -%}
-  {%- assign color_scheme          = section.settings.color_scheme -%}
-  {%- assign mobile_toggler        = section.settings.mobile_toggler -%}
-  {%- assign sticky_sidebar        = section.settings.sticky_sidebar -%}
-  {%- assign show_excerpt          = section.settings.show_excerpt -%}
-  {%- assign padding_top           = section.settings.padding_top -%}
-  {%- assign padding_bottom        = section.settings.padding_bottom -%}
-  {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
-  {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-  {%- assign image_placeholder 	   = settings.image_placeholder -%}
-  {%- assign is_focal              = settings.use_focal_images -%}
+{%- case borders -%}
+  {%- when 'image' -%}
+    {%- assign border = "image" -%}
+  {%- when 'full' -%}
+    {%- assign border = "full" -%}
+{%- endcase -%}
 
-  {% comment %} CSS variables start {% endcomment %}
-  {%- capture variables -%}
-    {%- case padding_top -%}
-      {%- when 'none' -%}
-        --padding-top: 0;
-      {%- when 'small' -%}
-        --padding-top: 24px;
-      {%- when 'medium' -%}
-        --padding-top: 68px;
-      {%- when 'large' -%}
-        --padding-top: 112px;
-    {%- endcase -%}
+{% comment %} CSS variables start {% endcomment %}
+{%- capture variables -%}
+  {%- case padding_top -%}
+    {%- when 'small' -%}
+      --padding-top: 24px;
+    {%- when 'medium' -%}
+      --padding-top: 60px;
+    {%- when 'large' -%}
+      --padding-top: 100px;
+  {%- endcase -%}
 
-    {%- case padding_bottom -%}
-      {%- when 'none' -%}
-        --padding-bottom: 0;
-      {%- when 'small' -%}
-        --padding-bottom: 24px;
-      {%- when 'medium' -%}
-        --padding-bottom: 68px;
-      {%- when 'large' -%}
-        --padding-bottom: 112px;
-    {%- endcase -%}
+  {%- case padding_bottom -%}
+    {%- when 'small' -%}
+      --padding-bottom: 24px;
+    {%- when 'medium' -%}
+      --padding-bottom: 60px;
+    {%- when 'large' -%}
+      --padding-bottom: 100px;
+  {%- endcase -%}
 
-    {%- case padding_top_mobile -%}
-      {%- when 'none' -%}
-        --padding-top-mobile: 0;
-      {%- when 'small' -%}
-        --padding-top-mobile: 24px;
-      {%- when 'medium' -%}
-        --padding-top-mobile: 40px;
-      {%- when 'large' -%}
-        --padding-top-mobile: 60px;
-    {%- endcase -%}
+  {%- case padding_top_mobile -%}
+    {%- when 'small' -%}
+      --padding-top-mobile: 24px;
+    {%- when 'medium' -%}
+      --padding-top-mobile: 40px;
+    {%- when 'large' -%}
+      --padding-top-mobile: 60px;
+  {%- endcase -%}
 
-    {%- case padding_bottom_mobile -%}
-      {%- when 'none' -%}
-        --padding-bottom-mobile: 0;
-      {%- when 'small' -%}
-        --padding-bottom-mobile: 24px;
-      {%- when 'medium' -%}
-        --padding-bottom-mobile: 40px;
-      {%- when 'large' -%}
-        --padding-bottom-mobile: 60px;
-    {%- endcase -%}
+  {%- case padding_bottom_mobile -%}
+    {%- when 'small' -%}
+      --padding-bottom-mobile: 24px;
+    {%- when 'medium' -%}
+      --padding-bottom-mobile: 40px;
+    {%- when 'large' -%}
+      --padding-bottom-mobile: 60px;
+  {%- endcase -%}
 
-    {%- case grid -%}
-      {%- when 'two' -%}
-        --grid-element: 2;
-      {%- when 'three' -%}
-        --grid-element: 3;
-    {%- endcase -%}
-  {%- endcapture -%}
-  {% comment %} CSS variables end {% endcomment %}
+  {%- case grid -%}
+    {%- when 'two' -%}
+      --grid-element: 2;
+    {%- when 'three' -%}
+      --grid-element: 3;
+    {%- when 'four' -%}
+      --grid-element: 4;
+  {%- endcase -%}
 
-  <div class="search__wrapper color-{{- color_scheme.id -}}" style="{{- variables | escape -}}">
-    <div class="search__container container{% if padding_top != blank or padding_top_mobile != blank %} search__container--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} search__container--padding-bottom{%- endif -%}">
-      {%- if section.blocks.size > 0 -%}
-        <div class="search__grid">
-          <div class="search__sidebar">
-            {%- render 'sidebar',
-                items: section.blocks,
-                toggler: mobile_toggler,
-                sticky: sticky_sidebar -%}
+  {%- case rounded_corners -%}
+    {%- when 'none' -%}
+      --border-radius-rounded-blocks: 0px;
+    {%- when 'small' -%}
+      --border-radius-rounded-blocks: 8px;
+    {%- when 'medium' -%}
+      --border-radius-rounded-blocks: 16px;
+    {%- when 'large' -%}
+      --border-radius-rounded-blocks: 32px;
+  {%- endcase -%}
+{%- endcapture -%}
+{% comment %} CSS variables end {% endcomment %}
+
+<div class="search__wrapper search__wrapper-{{ grid }} color-{{- color_scheme.id -}}{% if padding_top != blank or padding_top_mobile != blank %} search__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} search__wrapper--padding-bottom{%- endif -%}" style="{{- variables | escape -}}">
+  {%- unless full_width -%}
+    <div class="search__container container">
+  {%- endunless -%}
+      {%- if results_count > 0 -%}
+
+        {%- if show_amount -%}
+          <div class="search__top{% if full_width %} container{%- endif -%}">
+            {{ counter }}
+            {% if counter > 1 %}
+              {{ counter_plural }}
+            {% else %}
+              {{ counter_singular }}
+            {% endif %}
           </div>
-      {%- endif -%}
+        {%- endif -%}
 
-          {%- paginate results by limit -%}
-            <div class="search-results">
-              {%- for result in results -%}
-                {%- render 'product-card',
-                    product: result,
-                    placeholder: image_placeholder,
-                    focal: is_focal,
-                    show_excerpt: show_excerpt
-                -%}
-              {%- endfor -%}
+        {%- if section.blocks.size > 0 -%}
+          <div class="search__grid">
+            <div class="search__sidebar">
+              {%- render 'sidebar',
+                  items: section.blocks,
+                  toggler: mobile_toggler,
+                  sticky: sticky_sidebar -%}
             </div>
+        {%- endif -%}
 
-            {%- if paginate.pages > 1 -%}
-              <div class="search__pagination">
-                {%- include "pagination" -%}
-              </div>
-            {%- endif -%}
-          {%- endpaginate -%}
+              {%- paginate results by limit -%}
+                <div class="search-results">
+                  {%- for result in results -%}
+                    {%- render 'product-card',
+                        product: result,
+                        placeholder: image_placeholder,
+                        border: border,
+                        focal: is_focal,
+                        show_excerpt: show_excerpt
+                    -%}
+                  {%- endfor -%}
+                </div>
 
-      {%- if section.blocks.size > 0 -%}
-        </div>
+                {%- if paginate.pages > 1 -%}
+                  <div class="search__pagination{% if full_width %} container{%- endif -%}">
+                    {%- render "pagination", paginate: paginate -%}
+                  </div>
+                {%- endif -%}
+              {%- endpaginate -%}
+
+        {%- if section.blocks.size > 0 -%}
+          </div>
+        {%- endif -%}
+
+      {%- else -%}
+
+        {%- if message != blank -%}
+          <div class="search__message{% if full_width %} container{%- endif -%}">{{- message -}}</div>
+        {%- endif -%}
       {%- endif -%}
+  {%- unless full_width -%}
     </div>
-  </div>
-{%- endif -%}
+  {%- endunless -%}
+</div>
 
 {% schema %}
   {
@@ -128,9 +171,77 @@
       },
       {
         "type": "checkbox",
+        "id": "full_width",
+        "label": "Stretch products to screen edges",
+        "default": false
+      },
+      {
+        "type": "select",
+        "id": "rounded_corners",
+        "label": "Rounded corners",
+        "options": [
+          {
+            "value": "none",
+            "label": "None"
+          },
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "large",
+            "label": "Large"
+          }
+        ],
+        "default": "none"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_amount",
+        "label": "Show product amount",
+        "default": true
+      },
+      {
+        "type": "text",
+        "id": "counter_singular",
+        "label": "Product amount label singular",
+        "default": "Item shown"
+      },
+      {
+        "type": "text",
+        "id": "counter_plural",
+        "label": "Product amount label plural",
+        "default": "Items shown"
+      },
+      {
+        "type": "checkbox",
         "id": "show_excerpt",
         "default": true,
         "label": "Show product description excerpt"
+      },
+      {
+        "type": "select",
+        "id": "borders",
+        "label": "Border style",
+        "options": [
+          {
+            "value": "none",
+            "label": "None"
+          },
+          {
+            "value": "image",
+            "label": "Around image"
+          },
+          {
+            "value": "full",
+            "label": "Around whole product"
+          }
+        ],
+        "default": "image"
       },
       {
         "type": "number",
@@ -172,6 +283,10 @@
           {
             "value": "three",
             "label": "3 products"
+          },
+          {
+            "value": "four",
+            "label": "4 products"
           }
         ],
         "default": "three"
