--- a/assets/rx.css
+++ b/assets/rx.css
@@ -143,7 +143,7 @@
 .bq-content.rx-content h5,
 .bq-content.rx-content h6 {
   font-family: var(--font-heading);
-  font-size: 16px;
+  font-size: var(--font-size-regular);
   font-weight: var(--font-weight-semibold);
   line-height: var(--line-height-lg);
   text-rendering: optimizeLegibility;
@@ -202,12 +202,12 @@
 .bq-content.rx-content li,
 .bq-content.rx-content dt,
 .bq-content.rx-content dd {
-  font-size: 16px;
+  font-size: var(--font-size-regular);
   line-height: var(--line-height-lg);
 }
 
 .bq-content.rx-content li li {
-  font-size: 1em;
+  font-size: var(--font-size-regular);
 }
 
 .bq-content.rx-content dt {
@@ -289,7 +289,7 @@
 }
 
 .bq-content.rx-content cite {
-  font-size: 20px;
+  font-size: calc(var(--font-size-regular) + 4px);
 }
 
 .bq-content.rx-content dfn,
@@ -300,7 +300,7 @@
 .bq-content.rx-content samp,
 .bq-content.rx-content kbd,
 .bq-content.rx-content code {
-  font-size: 16px;
+  font-size: var(--font-size-regular);
 }
 
 .bq-content.rx-content sup,
